adding helm to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -143,5 +143,15 @@ dist
 
 # End of https://www.toptal.com/developers/gitignore/api/node
 
+# Created by https://www.toptal.com/developers/gitignore/api/helm
+# Edit at https://www.toptal.com/developers/gitignore?templates=helm
+
+### Helm ###
+# Chart dependencies
+**/charts/*.tgz
+
+# End of https://www.toptal.com/developers/gitignore/api/helm
+
+
 *.code-workspace
 setupEnv.sh
