--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,7 +18,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: pwd
-        run: pwd
-      - name: ls
-        run: ls -al
+      - name: "Docker Build and Publish"
+        run: ./.github/workflows/build-deploy.yml
