--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,5 +18,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: "Make script executable"
+        run: chmod +x ./.github/workflows/build-deploy.yml
       - name: "Docker Build and Publish"
         run: ./.github/workflows/build-deploy.yml
