--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,7 +37,11 @@ jobs:
     runs-on: ubuntu-latest
     container: alpine/helm
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: "Debug info"
         run: |
           echo "hello world"
           helm version
+          helm package deploy/dns_beacon_chart
+          ls -al
