--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -39,9 +39,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: "Debug info"
+      - name: "Package and publish"
+        env:
+          DOCKERHUB_USER: ${{ vars.DOCKERHUB_USER }}
+          DOCKERHUB_PWD: ${{ secrets.DOCKERHUB_PWD }}
         run: |
           echo "hello world"
           helm version
           helm package deploy/dns_beacon_chart
-          ls -al
+          docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PWD
+          helm push dns_beacon-1.0.0.tgz  oci://registry-1.docker.io/${DOCKERHUB_USER}
